--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="24dp"
-        android:layout_marginStart="20dp">
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp">
 
         <LinearLayout
             android:layout_marginTop="32dp"
@@ -27,8 +28,9 @@
                 android:id="@+id/searchedittext"
                 android:layout_width="230dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="24dp"
+                android:paddingStart="12dp"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="32dp"
                 android:background="@null"
                 android:hint="Search" />
 
@@ -48,7 +50,7 @@
             android:text="Result :"
             android:textSize="24sp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cardsearch" />
 
