--- a/app/src/main/res/layout/list_tupix_item_clm.xml
+++ b/app/src/main/res/layout/list_tupix_item_clm.xml
@@ -40,11 +40,11 @@
 
             <LinearLayout
                 android:id="@+id/data_movie"
-                android:layout_width="250dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginTop="0dp"
                 android:layout_marginStart="12dp"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/cardimage"
 
@@ -58,11 +58,6 @@
                     android:text="Hello Gncdjn"
                     android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/namecharac"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Kim Bear" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/movies_frerated"
